--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="mensagemFlutuante" style="display:none; position:fixed; top:24px; left:50%; transform:translateX(-50%); z-index:9999; background:#2563eb; color:white; padding:16px 32px; border-radius:8px; font-size:1.2em; box-shadow:0 2px 12px rgba(0,0,0,0.15); min-width:220px; text-align:center;"></div>
   <div class="login-container" id="loginContainer">
     <h2>Login</h2>
     <form id="loginForm">
